2004-04-29  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: add a clean target

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingExecutionManager.cs: People running apps from the IDE
	can be assumed to want line numbers if we can give them. Adding --debug
	to the execution.

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: add code for project references.

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManger.cs: add code for assembly references
	and embeding resources.

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* CSharpLanguageBinding.cs: implemented GetMakefile passthru.
	* CSharpBindingCompilerManager.cs: dirty dirty dirty first draft run
	through of GenerateMakefile, I have tested this with exactly *one*
	project, and that is all, just wanted to get something in svn.

2004-04-24  Todd Berman  <tberman@sevenl.net>

	* Parser/Parser.cs: new IsAsResolver passthrough.
	* Parser/Resolver.cs: new IsAsResolver to manage some (limited)
	completion there.

2004-04-23  John Luke  <jluke@cfl.rr.com>

	* CsharpBindingCompilerManager.cs: add /codepage:utf8

2004-04-19  Todd Berman  <tberman@sevenl.net>

	* Parser/Resolver.cs: Turn local variables into a properly consumable
	type for code completion.

2004-04-09  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: Show that something is going
	on so people dont get too worried. (Speed might need some work)
	* Makefile.am: add glib

2004-04-04  John Luke  <jluke@cfl.rr.com>

	* CSharpBindingExecutionManager.cs: improve error message

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Gui/OutputOptionsPanel.cs:
	* Gui/CodeGenerationPanel.cs: gettextify

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Project/CSharpCompilerParameters.cs: duh, refix library target bug

2004-04-01  Todd Berman  <tberman@sevenl.net>

	* Gui/OutputOptionsPanel.cs: parse resource string, closes bug #56325
