@@ -1,3 +1,7 @@
+2004-05-08  Todd Berman  <tberman@sevenl.net>
+
+	* CSharpBindingCompilerManager.cs: output /unsafe properly.
+
 2004-04-29  Todd Berman  <tberman@sevenl.net>
 
 	* CSharpBindingCompilerManager.cs: add a clean target
